--- a/jelastic/jelastic.conf
+++ b/jelastic/jelastic.conf
@@ -6,3 +6,4 @@ Admin_App_User=
 Node_Type=jetty8
 Webroot_Path="${OPENSHIFT_JETTY8_DIR}/versions/${Version}/webapps"
 Web_Access=1
+Valid_Engines=java7,java8
